--- a/index.html
+++ b/index.html
@@ -4,17 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./estilo.css" >
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Inicial</title>
 </head>
-<body>
+<body class="container-fluid">
     <h1>Projeto Inicial</h1>
     <div>
-        <label for="nome">Digite seu nome:</label>
-        <input type="text" id="nome" placeholder="Digite seu nome aqui">
-        <input type="button" id="botao" value="clique aqui">
+        <form>
+            <div class="mb-1">
+                <label for="nome">Digite seu nome:</label>
+                <input type="text" id="nome" placeholder="Digite seu nome aqui">
+            </div>
+
+            <div class="mb-1">
+                <label for="email">email</label>
+                <input type="text" id="email" placeholder="Digite seu email">
+
+            </div>
+
+            <div class="mb-1">
+                <label for="telefone">telefone</label>
+                <input type="number" id="telefone" placeholder="Digite seu telefone">
+            </div>
+
+            <div class="mb-1">
+                <label for="cep">CEP</label>
+                <input type="number" id="cep" placeholder="Digite seu cep">
+            </div>
+
+            <div class="mb-1">
+                <label for="email">logradouro</label>
+                <input type="text" id="logradouro" placeholder="Digite seu logradouro">
+            </div>
+            <div class="mb-1">
+                <label for="numero casa">numero da casa</label>
+                <input type="number" id="numero" placeholder="Digite seu numero da casa">
+            </div>
+            <div class="mb-1">
+                <label for="complemento">complemento</label>
+                <input type="text" id="complemento" placeholder="Digite seu um complemento">
+            </div>
+            <div class="mb-1">
+                <label for="bairro">bairro</label>
+                <input type="text" id="bairro" placeholder="Digite seu bairro">
+            </div>
+            <div class="mb-1">
+                <label for="cidade">cidade</label>
+                <input type="text" id="cidade" placeholder="Digite sua cidade">
+            </div>
+            <div class="mb-1">
+                <label for="estada">estado</label>
+                <input type="text" id="estado" placeholder="Digite seu estado">
+            </div>
+            <input type="button" id="botao" class="btn btn-primary" value="clique aqui">
+        </form>
+        <div id ="saida-de-dados" class="m-1 p-1 text-center"></div>
     </div>
+    <div>
+    
    <script src="./scripts.js"></script>
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
