--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <input type="text" id="logradouro" placeholder="Digite seu logradouro">
             </div>
             <div class="mb-1">
-                <label for="numero casa">numero da casa</label>
+                <label for="numero">numero da casa</label>
                 <input type="number" id="numero" placeholder="Digite seu numero da casa">
             </div>
             <div class="mb-1">
@@ -54,7 +54,7 @@
                 <input type="text" id="cidade" placeholder="Digite sua cidade">
             </div>
             <div class="mb-1">
-                <label for="estada">estado</label>
+                <label for="estado">estado</label>
                 <input type="text" id="estado" placeholder="Digite seu estado">
             </div>
             <input type="button" id="botao" class="btn btn-primary" value="clique aqui">
