--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
             <div class="mb-1">
                 <label for="cep">CEP</label>
-                <input type="number" id="cep" placeholder="Digite seu cep">
+                <input type="number" id="cep" placeholder="00000-000" maxlenght="8">
             </div>
 
             <div class="mb-1">
                 <label for="email">logradouro</label>
-                <input type="text" id="logradouro" placeholder="Digite seu logradouro">
+                <input type="text" id="logradouro" placeholder="Digite seu logradouro" disabled>
             </div>
             <div class="mb-1">
                 <label for="numero">numero da casa</label>
@@ -47,15 +47,15 @@
             </div>
             <div class="mb-1">
                 <label for="bairro">bairro</label>
-                <input type="text" id="bairro" placeholder="Digite seu bairro">
+                <input type="text" id="bairro" placeholder="Digite seu bairro" disabled>
             </div>
             <div class="mb-1">
                 <label for="cidade">cidade</label>
-                <input type="text" id="cidade" placeholder="Digite sua cidade">
+                <input type="text" id="cidade" placeholder="Digite sua cidade" disabled>
             </div>
             <div class="mb-1">
                 <label for="estado">estado</label>
-                <input type="text" id="estado" placeholder="Digite seu estado">
+                <input type="text" id="estado" placeholder="Digite seu estado" disabled>
             </div>
             <input type="button" id="botao" class="btn btn-primary" value="clique aqui">
         </form>
